Update baseurl in exampleSite config.toml
Refer: https://github.com/spf13/hugoThemes/issues/171

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,6 +1,6 @@
 ## Basic Configuration
 
-baseurl = "https://you.github.io/" 
+baseurl = "" #Example "https://<you>.github.io/"  
 builddrafts = false
 canonifyurls = false
 languageCode = "en-US"
