fix(highlightjs): fix typo in documentation and example of highlightJS parameter

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -46,7 +46,7 @@ email = "you@example.com"
 [params.extra]
 copyright = "© 2016. Erlich Bachman. [Some Rights Reserved](http://creativecommons.org/licenses/by/3.0/)." 
 poweredBy = true
-hightlightJS = true
+highlightJS = true
 
 ## Main Menu
 [[menu.main]]
