--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -47,7 +47,7 @@ email = "you@example.com"
 [params.extra]
 copyright = "© 2016. Erlich Bachman. [Some Rights Reserved](http://creativecommons.org/licenses/by/3.0/)." 
 poweredby = true
-hightlightjs = true
+highlightjs = true
 
 ## Main Menu
 [[menu.main]]
