- Changed FontAwesome to ForkAwesome to get Keybase icon. - Adding Keybase in Social Accounts

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -35,6 +35,7 @@ keywords = "minimalist,blog,goa,hugo,developer"
 ## Social Accounts
 [params.social]
 github = "<username>"
+keybase = "<username>"
 instagram = "<username>"
 xing = "<username>"
 linkedin = "<username>"
