Added setting to choose highlightjs theme.

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -49,6 +49,7 @@ email = "you@example.com"
 copyright = "© 2016. Erlich Bachman. [Some Rights Reserved](http://creativecommons.org/licenses/by/3.0/)." 
 poweredby = true
 highlightjs = true
+highlightjsstyle = "zenburn"
 
 ## Main Menu
 [[menu.main]]
