--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -56,7 +56,7 @@ pintrest = "<username>"
 steam = "<username>"
 reddit = "<username>"
 snapchat = "<username>"
-youtube = "<username>"
+youtube = "<channelid>"
 keybase = "<username>"
 twitch = "<username>"
 soundcloud = "<username>"
