Added Google Scholar support

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -41,6 +41,7 @@ linkedin = "<username>"
 twitter = "<username>"
 facebook = "<username>"
 google = "<username>"
+googlescholar = "<account_id>"
 stackoverflow = "<username>"
 lastfm = "<username>"
 goodreads = "<username>"
