Table of contents in blog posts
Added table of contets to the blog posts if they are longer than 300 words and toc variable is set to true in config file.

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -73,6 +73,7 @@ copyright = "© 2016. Erlich Bachman. [Some Rights Reserved](http://creativecomm
 poweredby = true
 highlightjs = true
 socialmarkup = true
+toc = true
 
 ## Main Menu
 [[menu.main]]
