Various improvements I have made on my fork. (#70)
* Improving the title setup for the pages.

Display site title on the first page, and site title + page title (blog post name) on all other sites. Probably improves SEO.

* Table of contents in blog posts

Added table of contets to the blog posts if they are longer than 300 words and toc variable is set to true in config file.

* RSS icon in the footer.

Added RSS icon with link to feed if displayrssicon variable is set to true in config file.

* Added Hugo version to the powered by footer section

* Updated for Hugo version 0.55.

* Updated fontawesome to version 5.8.2.

* Using variable for site url.

* Found even better variable.

* Added custom css and js files

Template users can add custom CSS and JS to their projects without losing main.css/js content

* Added placeholder files for custom JS and CSS, to prevent errors in browsers.

* Align list text to the left instead of justify.

Avoids funky whitespaces when the list entry is short and browser tries to justify the text.

* Fixed link to agency hugo theme.

* Bruno de Carvalho's blog link has no SSL.

Reverting to http link

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -74,6 +74,8 @@ copyright = "© 2016. Erlich Bachman. [Some Rights Reserved](http://creativecomm
 poweredby = true
 highlightjs = true
 socialmarkup = true
+toc = true
+displayrssicon = true
 
 ## Main Menu
 [[menu.main]]
