--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -20,18 +20,18 @@ googleAnalytics = "XYZ"
 enableRobotsTXT = true
 
 ## Language settings
-DefaultContentLanguage = "en-us"
+DefaultContentLanguage = "en"
 
 [languages]
-  [languages.en-us]
+  [languages.en]
     contentDir = "content/"
     title = "My blog"
     weight = 10
-  [languages.no-nb]
-    contentDir = "content/no-nb"
+  [languages.no]
+    contentDir = "content/no"
     title = "Min Blog"
     weight = 20
-    [languages.no-nb.params]
+    [languages.no.params]
       dateformat = "2 Jan, 2006"
       author = "Erlich Bachman"
       intro = "Grynder Guru Ekstraordinær"
@@ -114,17 +114,17 @@ displayrssicon = true
     weight = 300
     url = "/coderag/"
 
-[[languages.no-nb.menu.main]]
+[[languages.no.menu.main]]
     name = "blogg"
     weight = 100
     identifier = "blog"
     url = "/blog/"
-[[languages.no-nb.menu.main]]
+[[languages.no.menu.main]]
     name = "about"
     identifier = "about"
     weight = 200
     url = "/about/"
-[[languages.no-nb.menu.main]]
+[[languages.no.menu.main]]
     name = "coderag"
     identifier = "coderag"
     weight = 300
