--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -66,6 +66,7 @@ strava = "<username>"
 skype = "<username>"
 telegram = "<username>"
 whatsapp = "<username>"
+buymeacoffee = "<username>"
 email = "you@example.com"
 pgp = "<key_fingerprint>"
 
