add buymeacoffee to social.html (#107)
Co-authored-by: Raj Shenoy <673924+kaapiandcode@users.noreply.github.com>

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -66,6 +66,7 @@ strava = "<username>"
 skype = "<username>"
 telegram = "<username>"
 whatsapp = "<username>"
+buymeacoffee = "<username>"
 kaggle = "<username>"
 email = "you@example.com"
 pgp = "<key_fingerprint>"
