Add ORCID to example site

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -42,6 +42,7 @@ twitter = "<username>"
 facebook = "<username>"
 google = "<username>"
 googlescholar = "<account_id>"
+orcid = "0123-4567-8901-2345"
 stackoverflow = "<username>"
 lastfm = "<username>"
 goodreads = "<username>"
