--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -69,6 +69,7 @@ telegram = "<username>"
 whatsapp = "<username>"
 buymeacoffee = "<username>"
 kaggle = "<username>"
+holopin = "<username>"
 email = "you@example.com"
 pgp = "<key_fingerprint>"
 
